<resources>
    <string name="app_name">Games</string>
    <string name="welcome">Welcome!</string>
    <string name="text_login">With our app it will be much easier and more fun to keep track of your games!</string>
    <string name="mail">E-mail</string>
    <string name="password">Password</string>
    <string name="remind_me">Remind me</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="developed">developed by DS2M</string>
    <string name="games">Games</string>
    <string name="new_account">New Account</string>
    <string name="choose_profile_image">Shall we choose a photo?</string>
    <string name="authentication">Data for authentication</string>
    <string name="personal">Personal data</string>
    <string name="name">What\'s your name?</string>
    <string name="city">What\'s your city?</string>
    <string name="gaming_leve">What\'s your gaming level?</string>
    <string name="favorite_console">What\'s your favorite console?</string>
    <string name="birth">Birth data</string>
    <string name="casual">Casual</string>
    <string name="super_nintendo">Super Nintendo</string>
    <string name="genre">Genre:</string>
    <string name="feminine">Feminine</string>
    <string name="masculine">Masculine</string>
    <string name="none">none</string>
    <string name="any">Any</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="game_finished">Game finished</string>
    <string name="age">Age</string>
    <string name="currently_playing">Currently playing</string>
    <string name="displayed_level">Displayed level</string>
    <string name="games_registered">Your registered games</string>

    <string-array name="console">
        <item>PlayStation</item>
        <item>XBox One</item>
        <item>XBox 360</item>
        <item>zNintendo Switch</item>
        <item>Super Nintendo</item>
        <item>Nintendo 64</item>
        <item>Sega Saturn</item>
        <item>PlayStation</item>
        <item>PlayStation</item>
    </string-array>
</resources>