<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".ui.SignUpActivity">

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginTop="-4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cima_azul_escuro" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:layout_marginBottom="-2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baixo_azul_escuro" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="1dp"
        android:contentDescription="@string/none"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_lock_24" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/imageView19"
                app:layout_constraintTop_toTopOf="@+id/textView5"
                app:srcCompat="@drawable/ic_baseline_lock_24" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/choose_profile_image"
                android:textColor="@color/baby_blue_2"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView19"
                app:layout_constraintTop_toTopOf="@+id/imageView19" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toEndOf="@+id/imagePerson"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@drawable/ic_baseline_photo_camera_24" />

            <ImageView
                android:id="@+id/imagePerson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:srcCompat="@drawable/ic_baseline_person_24" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="32dp"
                android:text="@string/authentication"
                android:textColor="@color/baby_blue_2"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView22"
                app:layout_constraintTop_toBottomOf="@+id/imagePerson" />

            <EditText
                android:id="@+id/aInputEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="42dp"
                android:ems="10"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                android:paddingBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView22"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@+id/aInputPassword"
                app:layout_constraintTop_toBottomOf="@+id/aInputPassword"
                app:srcCompat="@drawable/ic_baseline_person_small" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/personal"
                android:textColor="@color/baby_blue_2"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageView23"
                app:layout_constraintTop_toTopOf="@+id/imageView23" />

            <EditText
                android:id="@+id/aInputName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="@+id/aInputPassword"
                app:layout_constraintStart_toStartOf="@+id/imageView23"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <EditText
                android:id="@+id/aInputCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPersonName"
                android:paddingBottom="15dp"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="@+id/aInputName"
                app:layout_constraintStart_toStartOf="@+id/aInputName"
                app:layout_constraintTop_toBottomOf="@+id/aInputName" />

            <EditText
                android:id="@+id/aInputBirthDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/birth"
                android:inputType="date"
                android:paddingBottom="15dp"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="@+id/aInputCity"
                app:layout_constraintStart_toStartOf="@+id/aInputCity"
                app:layout_constraintTop_toBottomOf="@+id/aInputCity" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/gaming_leve"
                android:textColor="@color/grey"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/aInputBirthDate"
                app:layout_constraintTop_toBottomOf="@+id/aInputBirthDate" />

            <TextView
                android:id="@+id/edttLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/casual"
                android:textColor="@color/navy_blue"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="@+id/aSlider_console"
                app:layout_constraintEnd_toEndOf="@+id/aInputBirthDate"
                app:layout_constraintTop_toTopOf="@+id/aSlider_console" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/favorite_console"
                android:textColor="@color/grey"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/aSlider_console"
                app:layout_constraintTop_toBottomOf="@+id/aSlider_console" />

            <Spinner
                android:id="@+id/aConsoleFavorito"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/any"
                android:entries="@array/console"
                android:minHeight="48dp"
                android:scrollbarSize="20dp"
                app:layout_constraintEnd_toEndOf="@+id/edttLevel"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/genre"
                android:textColor="@color/grey"
                app:layout_constraintStart_toStartOf="@+id/aConsoleFavorito"
                app:layout_constraintTop_toBottomOf="@+id/aConsoleFavorito" />

            <com.google.android.material.slider.Slider
                android:id="@+id/aSlider_console"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/any"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="18"
                app:layout_constraintEnd_toStartOf="@+id/edttLevel"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <EditText
                android:id="@+id/aInputPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="@+id/aInputEmail"
                app:layout_constraintStart_toStartOf="@+id/aInputEmail"
                app:layout_constraintTop_toBottomOf="@+id/aInputEmail" />


            <RadioGroup
                android:id="@+id/radioGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                app:flow_horizontalGap="30dp"
                app:layout_constraintEnd_toEndOf="@+id/aConsoleFavorito"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <RadioButton
                    android:id="@+id/buttonFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Female"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <RadioButton
                    android:id="@+id/buttonMasculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="20dp"
                    android:text="masculine"
                    app:layout_constraintBottom_toBottomOf="@+id/buttonFemale"
                    app:layout_constraintEnd_toEndOf="@+id/radioGenre"
                    app:layout_constraintTop_toTopOf="@+id/buttonFemale" />

            </RadioGroup>

            <Button
                android:id="@+id/teste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="39dp"
                android:layout_marginBottom="68dp"
                android:text="Button"
                app:layout_constraintBottom_toTopOf="@+id/textView5"
                app:layout_constraintEnd_toStartOf="@+id/imagePerson"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:text="@string/new_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView14" />

</androidx.constraintlayout.widget.ConstraintLayout>